<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"
        tools:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/scanner"
        android:enabled="true"
        android:icon="@drawable/scanner"
        android:title="@string/scan"
        tools:showAsAction="always"/>
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/scanner"
        android:title="@string/logout"
        tools:showAsAction="always"/>
</menu>